www/mobile-style.css
/* Default stuff */
*{
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none; /* Standard syntax */

}
#message{
    display: none;
    position: fixed;
    top: 10px;
    right: 10px;
    background-color: white;
    color: green;
    border-color: brown;
    border-style: solid;
    border-width: 2px;
    border-radius: 5px;
    padding: 0.5rem;
    text-align: center;
    max-width: 60vw;
    z-index: 5000;
}
body, html{
    padding: 0px;
    margin: 0px;
    height: 100vh;
    width: 100vw;
    background-color: lightslategray;
}
#all{
    /* max-width: 100vw; */
    max-height: 100vh;
    height: 100vh;
    width: 100vw;
    padding: 0px;
    margin: 0px;
}
/* Navbar stuff ------------------------------------------------------------------------- Navbar stuff */
#navbar-button{
    position: fixed;
    top: 0.3rem;
    left: 0.3rem;
    background-color: grey;
    border-radius: 1rem;
    z-index: 1000;
    padding: 0px;
    box-shadow: inset 0px -4px 10px rgba(0, 0, 0, 0.2);
}
#navbar-button-image{
    height: 2rem;
    width: 2rem;
    margin: 0.5rem;
    margin-bottom: 0.2rem;
}
#navbar{
    display: none;
    position: fixed;
    top: 3.5rem;
    left: 0.5rem;
    flex-direction: column;
    justify-content: space-around;
    background-color: rgba(0, 0, 0, 0.7);
    border-radius: 10px;
    z-index: 1000;
    /* align-items: center; */
}
#navbar *{
    color: white;
    padding: 0.2rem 0.4rem;
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
    font-size: 2rem;
    text-decoration: none;
    width: auto;
}
#navbar a:hover{
    background-color: rgb(51, 64, 66);
}
#navbar span{
    color: gold;
    border-style: solid;
    border-width: 3px;
    border-color: gold;
}
#navbar a:last-child{
    margin-right: 0px;
    text-align:end;
}

/* Index stuff ---------------------------------------------------------------- Index stuff */
#character-image{
    max-width: 100%;
}

/* Inventory stuff ----------------------------------------------------------------- Inventory stuff */
#inventory-search-box{ /* this thingy is temporary until I figure out searching properly */
    display: none;
}
.inventory-background{
    background-image: url("images/leather-texture.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
}
#inventory{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 0.8rem;
    width: 95vw;
    margin-left: auto;
    margin-right: auto;
    max-height: 80vh;
    padding-top: 10vh;
    padding-bottom: 10vh;
    overflow-x: hidden;
    overflow-y: auto;
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}
#inventory::-webkit-scrollbar{ /* Chrome and safari */
    display: none;
}
.item-box{
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    height: 14rem;
    background-color: rgba(0, 0, 0, 0.3);
    border-color: dimgray;
    border-radius: 2px;
    border-style: solid;
    border-width: 3px;
}
.item-box *{
    color: aliceblue;
}
.item-name{
    font-size: 1.5rem;
    border-style: solid;
    border-radius: 2px;
    border-width: 3px;
    padding: 3px;
    background-color: rgba(0, 0, 0, 0.65);
    max-width: 80%;
}
.long-name-item-1{
    font-size: 0.5rem;
}
.long-name-item-2{
    font-size: 1rem;
}
.item-type{
    font-size: 1.2rem;
}
.item-numbers{
    display: grid;
    width: auto;
    grid-template-columns: repeat(3, 1fr);
    border-radius: 5px;
    background-color: rgba(0, 0, 0, 0.6);
    margin-bottom: 1rem;
}
.item-numbers div{
    text-align: center;
    padding: 0.2rem;
    margin: 0.1rem;
    box-shadow: -3px -3px 6px rgba(0, 0, 0, 0.5) inset;
}
.item-description{
    display: none;
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.6);
    text-shadow: black 0px 0px 20px;
    color: aliceblue;
    font-size: 1.5rem;
    text-align: center;
    justify-content: center;
    align-items: center;
    z-index: 2000;
}
.item-remove-button{
    position: absolute;
    width: 1.5rem;
    height: 1.5rem;
    top: 0.2rem;
    left: 0.2rem;
}
.item-description-button{
    position: absolute;
    width: 1.5rem;
    height: 1.5rem;
    top: 0.2rem;
    right: 0.2rem;
}
#add-button{
    position: fixed;
    width: 4rem;
    height: 4rem;
    bottom: 0.5rem;
    right: 0.5rem;
    z-index: 1000;
}
/* Item creation menu */
#add-item-background{
    position: fixed;
    top: 0px;
    left: 0px;
    height: 100vh;
    width: 100vw;
    background-color: rgba(0, 0, 0, 0.35);
    justify-content: center;
    align-items: center;
    z-index: 3000;
}
#add-item-box{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    background-image: url("images/magic-circle.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center center;
    min-width: 80%;
    aspect-ratio: 1/1;
}
#add-item-box *{
    margin: 2%;
}
.add-item-text{
    text-align: center;
	border: none;
	border-radius: 5px;
	outline: none;
    color: white;
    background-color: rgba(16, 36, 67, 0.742);
    max-width: 100%;
}
#add-item-name{
    width: 14ch;
    font-size: 2rem;
}
#add-item-type{
    width: 12ch;
    font-size: 1.6rem;
}
#add-item-charge-max{
    width: 12ch;
    font-size: 1.6rem;
}
#add-item-description{
    font-size: 1.2rem;
    min-height: 15vh;
    min-width: 40vw;
}
#add-item-hide{
    position: fixed;
    bottom: 0.5rem;
    right: 0.5rem;
    width: 4rem;
    height: 4rem;
    z-index: 3001;
}
#add-item-confirm{
    position: fixed;
    bottom: 0.5rem;
    left: 0.5rem;
    width: 4rem;
    height: 4rem;
    z-index: 3001;
}

